@@ -797,6 +797,8 @@ typedef struct xterror_struct
 #define NS_XMPP_STREAMS "urn:ietf:params:xml:ns:xmpp-streams"
 #define NS_XMPP_SASL "urn:ietf:params:xml:ns:xmpp-sasl"
 
+#define NS_XMPP_PING "urn:xmpp:ping"
+
 #define NS_JABBERD_STOREDPRESENCE "http://jabberd.org/ns/storedpresence"
 #define NS_JABBERD_STOREDREQUEST "http://jabberd.org/ns/storedsubsciptionrequest"
 #define NS_JABBERD_STOREDSTATE "http://jabberd.org/ns/storedstate"	/**< namespace to store internal state of jabberd */
