@@ -61,6 +61,7 @@ Changes in features visible to the user
       from offline storage.
     * SASL authentication is possible if jabberd14 is used together with
       jadc2s.
+    * Support for XMPP Ping (XEP-0199)
 
 
 Version 1.4.4 - 2005-04-16
